objects/CZDisclosureParticipantConfig__c.object
<CustomObject>
    <description>This object represent Disclosure Participant</description>
    <fields>
        <fullName>CZDisclosureItem__c</fullName>
        <description>disclosure item lookup id</description>
        <label>Disclosure Item</label>
        <referenceTo>tffa__DisclosureItem__c</referenceTo>
        <relationshipLabel>DisclosureParticipantsConfig</relationshipLabel>
        <relationshipName>CZDisclosureParticipantsConfig</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NumberOfParticipants__c</fullName>
        <description>Number Of Participants in docusign</description>
        <label>No Of Participants</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParticipantRoles__c</fullName>
        <description>Participant Roles</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Participant Roles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParticipantType__c</fullName>
        <description>related list id</description>
        <label>Participant Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PARTY</fullName>
                    <label>Party</label>
                </value>
                <value>
                    <fullName>APPLICATION</fullName>
                    <label>Application</label>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>USER</fullName>
                    <label>User</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Disclosure Participant Config</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Disclosure Participant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DisclosureParticipantsConfig</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>